--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -4,3 +4,10 @@
   flex-direction: column;
   align-items: center;
 }
+
+.login {
+  margin-top: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
