--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,11 +1,11 @@
-.register {
+#register {
   margin-top: 100px;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.login {
+#login {
   margin-top: 100px;
   display: flex;
   flex-direction: column;
