--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400&display=swap");
 @import url("../../node_modules/react-tabs/style/react-tabs.css");
+@import url("../../node_modules/react-responsive-carousel/lib/styles/carousel.css");
 
 :root {
   --color-brown: #6f4c15;
@@ -13,6 +14,14 @@
 
 img {
   max-width: 100%;
+}
+
+.preview-img {
+  width: 500px;
+}
+
+.carousel-container {
+  width: 60vw;
 }
 
 body {
