--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,196 +1,269 @@
 @import url("https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400&display=swap");
 @import url("../../node_modules/react-tabs/style/react-tabs.css");
 @import url("../../node_modules/react-responsive-carousel/lib/styles/carousel.css");
+
+@mixin global-button {
+  padding: 1rem 2rem;
+  border: none;
+  background-color: var(--color-orange);
+  border-radius: 15px;
+  font-family: var(--wilderness-font);
+  font-size: 1.7rem;
+}
+
 :root {
-    --color-brown: #6f4c15;
-    --color-yellow: #f0d92a;
-    --color-inky-blue: #0a1e1f;
-    --color-pink: #ef3d6d;
-    --color-orange: #fa5210;
-    --color-forest-green: #285d43;
-    --wilderness-font: "Amatic SC", cursive;
+  --color-brown: #6f4c15;
+  --color-yellow: #f0d92a;
+  --color-inky-blue: #0a1e1f;
+  --color-pink: #ef3d6d;
+  --color-orange: #fa5210;
+  --color-forest-green: #285d43;
+  --color-off-white: rgb(247, 240, 230);
+  --wilderness-font: "Amatic SC", cursive;
 }
 
 img {
-    max-width: 100%;
+  max-width: 100%;
+}
+
+h1 {
+  margin-top: 0;
 }
 
 .loading-container {
-    display: flex;
-    flex-direction: column;
-    width: 90vw;
-    height: 90vh;
-    justify-content: center;
-    align-items: center;
-    .loading {
-        width: 250px;
-        border-radius: 50%;
-        border: 10px solid black;
-    }
+  display: flex;
+  flex-direction: column;
+  width: 90vw;
+  height: 90vh;
+  justify-content: center;
+  align-items: center;
+  .loading {
+    width: 250px;
+    border-radius: 50%;
+    border: 10px solid black;
+  }
 }
 
 .preview-img {
-    width: 500px;
+  width: 500px;
 }
 
 .carousel-container {
-    width: 60vw;
+  width: 60vw;
 }
 
 body {
-    height: 100vh;
+  height: 100vh;
+
+  #root {
+    height: 100%;
+  }
+
+  main {
+    height: 92vh;
+  }
+}
+
+#splashscreen {
+  position: relative;
+  height: 100vh;
+  overflow: hidden;
+  background-image: linear-gradient(0deg, #252f15, #3a682b, #1f58a5);
+
+  svg {
+    position: absolute;
+    top: -6.5vh;
+    left: -30vw;
+    transform: scale(0.85);
+  }
+
+  .buttons {
+    position: absolute;
+    top: 460px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+
+    a {
+      margin-bottom: 1.2rem;
+      color: rgb(247, 240, 230);
+    }
+
+    button {
+      @include global-button();
+    }
+  }
 }
 
 #register {
-    margin-top: 100px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  margin-top: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 #login {
-    margin-top: 100px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  margin-top: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 #homepage {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  height: 100%;
+  background-color: var(--color-off-white);
+
+  .hero {
+    height: 50vh;
+    width: 90vw;
     display: flex;
-    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    justify-content: space-evenly;
-    height: 100vh;
-    .hero {
-        width: 90vw;
-        background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../assets/hero-img.jpg");
-        background-repeat: no-repeat;
-        background-size: cover;
-        h1 {
-            font-family: var(--wilderness-font);
-            color: white;
-            font-size: 6rem;
-            text-align: center;
-        }
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+      url("../assets/hero-img.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    h1 {
+      font-family: var(--wilderness-font);
+      color: white;
+      font-size: 6rem;
+      text-align: center;
+      margin: auto;
     }
-    button {
-        min-width: 15rem;
-        border: none;
-        padding: 1.2rem 2rem;
-        background-color: var(--color-orange);
-        border-radius: 25px;
-        color: white;
-        text-transform: uppercase;
-        font-family: sans-serif;
-    }
+  }
+
+  button {
+    @include global-button();
+
+    // min-width: 15rem;
+    // border: none;
+    // padding: 1.2rem 2rem;
+    // background-color: var(--color-orange);
+    // border-radius: 25px;
+    // color: white;
+    // text-transform: uppercase;
+    // font-family: sans-serif;;;
+  }
 }
 
 #hotels {
-    article.hotel-tile {
-        display: flex;
-        img {
-            margin: 2rem;
-        }
-        .hotel-info {}
+  article.hotel-tile {
+    display: flex;
+    img {
+      margin: 2rem;
     }
+    .hotel-info {
+    }
+  }
 }
 
-// flex-start not working? #logo still on right hand side of navbar
-nav {
-    width: 100vw;
+#navbar {
+  width: 100vw;
+  display: flex;
+  justify-content: space-between;
+  height: 8vh;
+
+  ul {
     display: flex;
-    justify-content: space-between;
-    ul {
-        display: flex;
-        list-style: none;
-        li {
-            margin: 0 10px;
-        }
+    list-style: none;
+
+    li {
+      margin: 0 10px;
     }
+  }
 }
 
 #single-campground {
-    .rec-area-info {
-        .review-header {
-            display: flex;
-            align-items: center;
-        }
-        .campground-attributes {
-            .single-attribute {
-                display: flex;
-                align-items: center;
-            }
-        }
-        .contact {
-            .phone,
-            .email {
-                display: flex;
-                align-items: center;
-            }
-        }
+  .rec-area-info {
+    .review-header {
+      display: flex;
+      align-items: center;
     }
+    .campground-attributes {
+      .single-attribute {
+        display: flex;
+        align-items: center;
+      }
+    }
+    .contact {
+      .phone,
+      .email {
+        display: flex;
+        align-items: center;
+      }
+    }
+  }
 }
 
 #settings {
-    label {
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        width: 80%;
-        font-size: 3rem;
-        font-family: var(--body-font);
-        margin-bottom: 3rem;
-        input {
-            width: 150px;
-            height: 40px;
-            -webkit-appearance: none;
-            appearance: none;
-            border-radius: 18px;
-            border: 4px solid rgb(44, 44, 44);
-            position: relative;
-            margin-left: 30px;
-            order: 2;
-            &::before {
-                content: "";
-                position: absolute;
-                top: -14px;
-                left: -20px;
-                height: 50px;
-                width: 50px;
-                border: 4px solid black;
-                transform: scale(1.3);
-                background-color: white;
-                border-radius: 8px;
-                transition: 0.5s ease;
-            }
-            &:checked::before {
-                left: 80px;
-            }
-            &:checked+span.first-label-span {
-                color: rgb(179, 179, 179);
-            }
-            &:checked~span.second-label-span {
-                color: black;
-            }
-        }
-        span.first-label-span {
-            order: 1;
-        }
-        span.second-label-span {
-            color: rgb(179, 179, 179);
-            order: 3;
-        }
+  label {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 80%;
+    font-size: 3rem;
+    font-family: var(--body-font);
+    margin-bottom: 3rem;
+    input {
+      width: 150px;
+      height: 40px;
+      -webkit-appearance: none;
+      appearance: none;
+      border-radius: 18px;
+      border: 4px solid rgb(44, 44, 44);
+      position: relative;
+      margin-left: 30px;
+      order: 2;
+      &::before {
+        content: "";
+        position: absolute;
+        top: -14px;
+        left: -20px;
+        height: 50px;
+        width: 50px;
+        border: 4px solid black;
+        transform: scale(1.3);
+        background-color: white;
+        border-radius: 8px;
+        transition: 0.5s ease;
+      }
+      &:checked::before {
+        left: 80px;
+      }
+      &:checked + span.first-label-span {
+        color: rgb(179, 179, 179);
+      }
+      &:checked ~ span.second-label-span {
+        color: black;
+      }
     }
+    span.first-label-span {
+      order: 1;
+    }
+    span.second-label-span {
+      color: rgb(179, 179, 179);
+      order: 3;
+    }
+  }
 }
 
 #map-container {
-    width: 100vw;
-    display: flex;
-    justify-content: center;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
 }
 
 .popoutRec {
-    height: 300px;
-    width: 300px;
-    object-fit: cover;
+  height: 300px;
+  width: 300px;
+  object-fit: cover;
 }
