--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Amatic+SC&family=Poppins:wght@300&display=swap");
 @import url("../../node_modules/react-tabs/style/react-tabs.css");
 @import url("../../node_modules/react-responsive-carousel/lib/styles/carousel.css");
 
@@ -20,17 +20,19 @@
   --color-forest-green: #285d43;
   --color-off-white: rgb(247, 240, 230);
   --wilderness-font: "Amatic SC", cursive;
+  --body-font: "Poppins", sans-serif;
 }
 
 img {
   max-width: 100%;
 }
 
-h1 {
-  margin-top: 0;
+h1,
+p {
+  margin: 0;
 }
 
-.loading-container {
+#loading-container {
   display: flex;
   flex-direction: column;
   width: 90vw;
@@ -48,12 +50,10 @@ h1 {
   width: 500px;
 }
 
-.carousel-container {
-  width: 60vw;
-}
-
 body {
   height: 100vh;
+  font-family: var(--body-font);
+  background-color: var(--color-off-white);
 
   #root {
     height: 100%;
@@ -119,7 +119,6 @@ body {
   align-items: center;
   justify-content: space-evenly;
   height: 100%;
-  background-color: var(--color-off-white);
 
   .hero {
     height: 50vh;
@@ -182,7 +181,68 @@ body {
   }
 }
 
-#single-campground {
+#single-site {
+  padding: 1rem;
+
+  h1 {
+    text-align: center;
+    font-family: var(--wilderness-font);
+    font-size: 2.5rem;
+    margin-bottom: 0.4rem;
+  }
+
+  .review-header {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+
+    p {
+      font-size: 0.9rem;
+    }
+
+    .display-rating {
+      padding: 0.3rem 0;
+    }
+
+    .widget-ratings {
+      max-width: 70%;
+      display: flex;
+      height: min-content;
+
+      .widget-container {
+        padding: 0 !important;
+        width: min-content;
+        height: min-content;
+        transform: scale(0.7);
+
+        svg {
+          width: 40px !important;
+          height: 40px !important;
+        }
+      }
+    }
+  }
+
+  .wish-list-visited-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin: 0.3rem 0 1.1rem;
+
+    svg {
+      transform: scale(1.3) translateX(-5px);
+    }
+
+    svg:first-of-type {
+      margin-right: 1rem;
+    }
+  }
+
+  .carousel-container {
+    width: 100%;
+    margin: 1rem 0;
+  }
+
   .rec-area-info {
     .review-header {
       display: flex;
@@ -201,6 +261,10 @@ body {
         align-items: center;
       }
     }
+  }
+
+  button {
+    @include global-button();
   }
 }
 
