--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Amatic+SC&family=Poppins:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Amatic+SC&family=Poppins:wght@300;600&display=swap");
 @import url("../../node_modules/react-tabs/style/react-tabs.css");
 @import url("../../node_modules/react-responsive-carousel/lib/styles/carousel.css");
 @mixin global-button {
@@ -22,6 +22,36 @@
   --body-font: "Poppins", sans-serif;
 }
 
+div.react-tabs {
+  ul {
+    display: flex;
+    margin: 0;
+
+    li {
+      flex: 1;
+      text-align: center;
+      text-transform: uppercase;
+      font-family: var(--wilderness-font);
+      font-size: 1.7rem;
+      letter-spacing: 0.1rem;
+      border-bottom: 2px solid rgb(50, 50, 50);
+
+      &.react-tabs__tab--selected {
+        border: 2px solid rgb(50, 50, 50);
+        border-bottom: 1px dashed grey;
+        background-color: var(--color-off-white);
+      }
+    }
+  }
+
+  div.react-tabs__tab-panel {
+    border: 2px solid rgb(50, 50, 50);
+    border-top: none;
+    border-bottom-left-radius: 6px;
+    border-bottom-right-radius: 6px;
+    padding: 1.3rem;
+  }
+}
 img {
   max-width: 100%;
 }
@@ -29,6 +59,10 @@ img {
 h1,
 p {
   margin: 0;
+}
+
+p {
+  line-height: 1.6;
 }
 
 #loading-container {
@@ -157,8 +191,8 @@ body {
     img {
       margin: 2rem;
     }
-    .hotel-info {
-    }
+    // .hotel-info {
+    // }
   }
 }
 
@@ -218,11 +252,16 @@ body {
     }
   }
 
+  .carousel-container {
+    width: 100%;
+    margin: 1rem 0;
+  }
+
   .wish-list-visited-container {
     display: flex;
     align-items: center;
     justify-content: space-around;
-    margin: 0.3rem 0 1.1rem;
+    margin: 1.5rem 0 1.5rem;
 
     svg {
       transform: scale(1.3) translateX(-5px);
@@ -233,33 +272,29 @@ body {
     }
   }
 
-  .carousel-container {
-    width: 100%;
-    margin: 1rem 0;
-  }
-
-  .rec-area-info {
-    .review-header {
+  div.react-tabs {
+    .review-content {
       display: flex;
-      align-items: center;
-    }
-    .campground-attributes {
-      .single-attribute {
-        display: flex;
-        align-items: center;
-      }
-    }
-    .contact {
-      .phone,
-      .email {
-        display: flex;
-        align-items: center;
+      flex-direction: column;
+      align-items: flex-end;
+
+      h4 {
+        text-align: right;
+        font-size: 1.1rem;
       }
     }
   }
 
   button {
     @include global-button();
+    margin: 2rem 0;
+  }
+
+  .reviews,
+  .accordion-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 }
 
@@ -311,6 +346,28 @@ body {
     span.second-label-span {
       color: rgb(179, 179, 179);
       order: 3;
+    }
+  }
+}
+
+#review-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+
+  .review-avatar {
+    height: 100%;
+    width: 30vw;
+    display: flex;
+    align-items: center;
+  }
+
+  .review-content {
+    h4 {
+      margin: 0;
+      text-decoration: underline;
+      text-transform: capitalize;
     }
   }
 }
