--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -22,10 +22,6 @@
   --body-font: "Poppins", sans-serif;
 }
 
-img {
-  max-width: 100%;
-}
-
 h1,
 p {
   margin: 0;
@@ -116,7 +112,7 @@ body {
   height: 100%;
 
   .hero {
-    height: 50vh;
+    height: 45vh;
     width: 90vw;
     display: flex;
     flex-direction: column;
@@ -132,7 +128,7 @@ body {
     h1 {
       font-family: var(--wilderness-font);
       color: white;
-      font-size: 6rem;
+      font-size: 4rem;
       text-align: center;
       margin: auto;
     }
@@ -162,17 +158,93 @@ body {
   }
 }
 
+#browse {
+  h1 {
+    font-family: var(--wilderness-font);
+    text-align: center;
+    font-size: 5rem;
+    margin: 1rem;
+  }
+  a {
+    text-decoration: none;
+    font-family: var(--wilderness-font);
+    color: black;
+    .tile {
+      text-align: center;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      margin: 1.6rem;
+      background-color: var(--color-off-white);
+      box-shadow: 3px 3px 10px 2px rgba(0, 0, 0, 0.4), -3px -3px 10px 2px rgba(255, 255, 255, 0.9);
+      border-radius: 20px;
+      padding: 0.2rem;
+        h2 {
+          font-size: 2.5rem;
+          margin: 1.2rem;
+        }
+        h3 {
+          font-size: 1.9rem;
+          margin: 1.2rem;
+        }
+        .rating {
+          margin-bottom: 1rem;
+          .star-number {
+            font-family: var(--body-font);
+            color: var(--color-forest-green);
+            text-decoration: underline;
+            font-size: 0.82rem;
+            margin-left: 0.2rem;
+          }
+          svg {
+            transform: scale(1.2);
+            margin: 0 2px;
+          }
+        }
+    }
+    img {
+      max-width: 90%;
+    }
+  }
+}
+
 #navbar {
+  background-color: var(--color-forest-green);
   width: 100vw;
   display: flex;
-  justify-content: space-between;
-  height: 8vh;
+  justify-content: center;
+  align-items: center;
+  height: 10vh;
+  img.logo {
+   display: none;
+  }
   ul {
     display: flex;
+    // justify-content: space-evenly;
     list-style: none;
-    li {
+    max-width: 100%;
+    padding: 0em;
+    .nav-btn {
       margin: 0 10px;
+      display: flex;
+      align-items: center;
+      border-radius: 8px;
+      height: 5vh;   
+      border: 2px solid var(--color-off-white); 
+      a {
+        color: var(--color-off-white);
+        text-decoration: none;
+        text-transform: uppercase;
+        font-size: 1rem;
+        font-family: var(--body-font);
+        padding: 0 10px;
+      }
     }
+    .nav-btn:hover {
+        background-color: orange;
+      }
+
   }
 }
 
