--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Amatic+SC&family=Poppins:wght@300;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Amatic+SC&family=Poppins:wght@300;400;500;600&display=swap");
 @import url("../../node_modules/react-tabs/style/react-tabs.css");
 @import url("../../node_modules/react-responsive-carousel/lib/styles/carousel.css");
 @mixin global-button {
@@ -86,6 +86,7 @@ p {
 body {
   height: 100vh;
   font-family: var(--body-font);
+  font-weight: 300;
   background-color: var(--color-off-white);
 
   #root {
@@ -93,7 +94,7 @@ body {
   }
 
   main {
-    height: 92vh;
+    height: 90vh;
   }
 }
 
@@ -296,7 +297,7 @@ body {
     margin-bottom: 0.4rem;
   }
 
-  .review-header {
+  .site-review-header {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -326,6 +327,16 @@ body {
         }
       }
     }
+
+    .no-reviews {
+      display: flex;
+      align-items: center;
+      margin: 0.3rem 0 0.2rem;
+
+      p {
+        margin-left: 0.5rem;
+      }
+    }
   }
 
   .carousel-container {
@@ -348,22 +359,29 @@ body {
     }
   }
 
-  div.react-tabs {
-    .review-content {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-end;
-
-      h4 {
-        text-align: right;
-        font-size: 1.1rem;
-      }
+  .campground-attributes,
+  address#contact {
+    h2 {
+      margin-bottom: 0.5rem;
     }
+    p {
+      display: inline-block;
+      margin-left: 0.6rem;
+    }
+  }
+
+  .campground-attributes {
+    margin-bottom: 1rem;
+    padding: 0.3rem;
   }
 
   button {
     @include global-button();
-    margin: 2rem 0;
+    margin: 2rem 0 1rem;
+  }
+
+  p.post-review-button-note {
+    font-size: 0.8rem;
   }
 
   .reviews,
@@ -383,6 +401,7 @@ body {
     font-size: 3rem;
     font-family: var(--body-font);
     margin-bottom: 3rem;
+
     input {
       width: 150px;
       height: 40px;
@@ -393,6 +412,7 @@ body {
       position: relative;
       margin-left: 30px;
       order: 2;
+
       &::before {
         content: "";
         position: absolute;
@@ -406,12 +426,15 @@ body {
         border-radius: 8px;
         transition: 0.5s ease;
       }
+
       &:checked::before {
         left: 80px;
       }
+
       &:checked + span.first-label-span {
         color: rgb(179, 179, 179);
       }
+
       &:checked ~ span.second-label-span {
         color: black;
       }
@@ -428,22 +451,75 @@ body {
 
 #review-container {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
   align-items: center;
   width: 100%;
+  padding: 0.5rem 0.2rem 2rem;
+  border-bottom: 1px solid black;
 
-  .review-avatar {
-    height: 100%;
-    width: 30vw;
+  .review-header {
     display: flex;
-    align-items: center;
+    width: 100%;
+
+    .review-avatar {
+      height: 100%;
+      width: 20vw;
+      display: flex;
+      align-items: center;
+    }
+
+    .review-meta-info {
+      flex: 1;
+      margin: 0 1rem;
+
+      p {
+        font-size: 0.9rem;
+        line-height: 1.2;
+      }
+
+      p.reviewer {
+        font-size: 1.1rem;
+        margin-bottom: 0.1rem;
+        font-weight: 500;
+      }
+
+      div.display-rating {
+        margin-top: 0.6rem;
+        transform: scale(1.1) translateX(4%);
+      }
+    }
   }
 
   .review-content {
+    padding-top: 1.3rem;
+
     h4 {
-      margin: 0;
-      text-decoration: underline;
+      margin: 0 0 0.5rem;
       text-transform: capitalize;
+      text-decoration: underline;
+      font-size: 1rem;
+      font-weight: 500;
+    }
+
+    .comments {
+      h5 {
+        font-size: 1.4rem;
+        font-family: var(--wilderness-font);
+        // text-decoration: underline;
+        margin: 1.5rem 0 0.5rem;
+      }
+      p {
+        font-size: 0.9rem;
+      }
+
+      p.comment-meta-info {
+        font-weight: 500;
+      }
+
+      h6 {
+        font-size: 0.9rem;
+        margin: 1.2rem 0;
+      }
     }
   }
 }
@@ -468,4 +544,20 @@ body {
   height: 300px;
   width: 300px;
   object-fit: cover;
+}
+
+#contact {
+  h2 {
+    font-style: none;
+  }
+  div {
+    margin-bottom: 0.5rem;
+  }
+  .address {
+    display: flex;
+    align-items: flex-start;
+    svg {
+      transform: translateY(5px);
+    }
+  }
 }
