--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -52,6 +52,7 @@ div.react-tabs {
     padding: 1.3rem;
   }
 }
+
 img {
   max-width: 100%;
 }
@@ -69,7 +70,7 @@ p {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
   display: flex;
   flex-direction: column;
   width: 90vw;
@@ -133,18 +134,34 @@ body {
   }
 }
 
-#register {
-  margin-top: 100px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
+#register,
 #login {
-  margin-top: 100px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  h1 {
+    font-family: var(--wilderness-font);
+    font-size: 3.7rem;
+    text-align: center;
+    margin: 2rem 0;
+  }
+
+  form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    label {
+      margin-bottom: 0.3rem;
+    }
+
+    input {
+      padding: 0.5rem;
+      margin-bottom: 1rem;
+    }
+
+    button {
+      @include global-button();
+      margin-top: 1rem;
+    }
+  }
 }
 
 #homepage {
@@ -206,7 +223,7 @@ body {
     margin: 1.6rem;
     background-color: var(--color-off-white);
     box-shadow: 3px 3px 10px 2px rgba(0, 0, 0, 0.4),
-        -3px -3px 10px 2px rgba(255, 255, 255, 0.9);
+      -3px -3px 10px 2px rgba(255, 255, 255, 0.9);
     border-radius: 20px;
     padding: 0.2rem;
     .hotel-info {
@@ -502,7 +519,7 @@ body {
   flex-direction: column;
   align-items: center;
   width: 100%;
-  padding: 0.5rem 0.2rem 2rem;
+  padding: 2rem 0.2rem 1rem;
   border-bottom: 1px solid black;
 
   .review-header {
@@ -540,6 +557,7 @@ body {
 
   .review-content {
     padding-top: 1.3rem;
+    width: 100%;
 
     h4 {
       margin: 0 0 0.5rem;
@@ -572,26 +590,89 @@ body {
   }
 }
 
+#post-review {
+  h1 {
+    font-family: var(--wilderness-font);
+    font-size: 3.8rem;
+    text-align: center;
+    margin: 2rem 0;
+  }
+  form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    label {
+      margin-bottom: 0.6rem;
+    }
+
+    input,
+    div.widget-ratings,
+    textarea {
+      margin-bottom: 1.6rem;
+    }
+
+    input,
+    textarea {
+      padding: 0.5rem;
+    }
+
+    button {
+      @include global-button();
+    }
+  }
+}
+
+#post-comment {
+  h1 {
+    font-family: var(--wilderness-font);
+    font-size: 3.7rem;
+    text-align: center;
+    margin: 2rem 0;
+  }
+
+  form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    label {
+      margin-bottom: 1rem;
+    }
+
+    textarea {
+      padding: 0.5rem;
+      margin-bottom: 2rem;
+    }
+
+    button {
+      @include global-button();
+      margin: 1rem;
+    }
+  }
+}
+
 #map-container {
   width: 100vw;
   display: flex;
   justify-content: center;
+
   .markerButton {
     background-color: rgba(0, 0, 0, 0);
     border: none;
   }
-}
 
-.popoutRec {
-  height: 300px;
-  width: 300px;
-  object-fit: cover;
-}
+  .popoutRec {
+    height: 300px;
+    width: 300px;
+    object-fit: cover;
+  }
 
-.popoutCampground {
-  height: 300px;
-  width: 300px;
-  object-fit: cover;
+  .popoutCampground {
+    height: 300px;
+    width: 300px;
+    object-fit: cover;
+  }
 }
 
 #contact {
