--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Amatic+SC&family=Poppins:wght@300;400;500;600&display=swap");
 @import url("../../node_modules/react-tabs/style/react-tabs.css");
 @import url("../../node_modules/react-responsive-carousel/lib/styles/carousel.css");
+
 @mixin global-button {
   padding: 1rem 2rem;
   border: none;
@@ -261,8 +262,16 @@ body {
     align-items: center;
     flex-direction: column;
     margin: 1rem;
+
     p {
       padding-right: 0.25rem;
+    }
+
+    select.dropdown {
+      background: none;
+      padding: 0.2rem 0.4rem;
+      border: 2px solid black;
+      border-radius: 4px;
     }
   }
   h1 {
@@ -460,37 +469,45 @@ body {
 }
 
 #settings {
+  padding-top: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  p {
+    font-size: 1.2rem;
+  }
   label {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     width: 80%;
-    font-size: 3rem;
+    font-size: 1.4rem;
     font-family: var(--body-font);
-    margin-bottom: 3rem;
+    margin: 1.5rem auto 3rem;
 
     input {
-      width: 150px;
-      height: 40px;
+      width: 110px;
+      height: 30px;
       -webkit-appearance: none;
       appearance: none;
       border-radius: 18px;
-      border: 4px solid rgb(44, 44, 44);
+      border: 2px solid rgb(44, 44, 44);
       position: relative;
-      margin-left: 30px;
+      // margin-left: 30px;
       order: 2;
 
       &::before {
         content: "";
         position: absolute;
-        top: -14px;
+        top: -12px;
         left: -20px;
-        height: 50px;
-        width: 50px;
+        height: 40px;
+        width: 40px;
         border: 4px solid black;
         transform: scale(1.3);
-        background-color: white;
-        border-radius: 8px;
+        background-color: var(--color-inky-blue);
+        border-radius: 50%;
         transition: 0.5s ease;
       }
 
@@ -513,6 +530,11 @@ body {
       color: rgb(179, 179, 179);
       order: 3;
     }
+  }
+
+  button {
+    @include global-button();
+    margin: 1rem 0 2rem;
   }
 }
 
@@ -657,6 +679,27 @@ body {
 #my-account {
   div.react-tabs__tab-panel {
     padding: 0.6rem;
+
+    .review-header {
+      align-items: center;
+
+      .review-avatar {
+        width: 40vw;
+
+        img {
+          width: 40vw;
+          height: 40vw;
+          object-fit: cover;
+          border-radius: 50%;
+        }
+      }
+
+      .review-meta-info {
+        h3 {
+          margin: 0 0 0.6rem;
+        }
+      }
+    }
   }
   .bio {
     margin: 1.6rem;
@@ -674,11 +717,14 @@ body {
     }
     h3 {
       margin-bottom: 0.3rem;
-      font-size: 1.7rem;
+      font-size: 1.8rem;
+    }
+    p {
+      margin: 0.5rem;
     }
     .link {
       font-family: var(--body-font);
-      font-size: 0.75rem;
+      font-size: 0.9rem;
       color: var(--color-forest-green);
       text-decoration: underline;
     }
@@ -687,6 +733,11 @@ body {
     }
     .bio-options {
       font-family: var(--body-font);
+
+      textarea {
+        padding: 0.5rem;
+        margin: 1rem;
+      }
       .add-bio {
         font-family: var(--body-font);
         text-decoration: underline;
@@ -762,10 +813,9 @@ body {
   }
   div {
     margin-bottom: 0.5rem;
-  }
-  .address {
     display: flex;
     align-items: flex-start;
+    word-break: break-all;
     svg {
       transform: translateY(5px);
     }
