--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -759,8 +759,13 @@ body {
   }
 }
 
+a {
+  text-decoration: none;
+  font-family: var(--wilderness-font);
+  color: black;
 .site-list-item {
   text-align: center;
+  text-decoration: none;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -781,7 +786,13 @@ body {
     margin-bottom: 0em;
     font-family: var(--wilderness-font);
     font-size: 2rem;
+    color: black;
   }
+  .visited {
+    text-decoration: none;
+  }
+
+}
 }
 
 #map-container {
@@ -794,17 +805,26 @@ body {
     border: none;
   }
 
-  .popoutRec {
-    height: 300px;
-    width: 300px;
+.mapboxgl-popup-content {
+width: 80%;
+  .popoutRec, .popoutCampground  {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+    h3 {
+      word-wrap: break-word ;
+      max-width: 80%;
+      text-align: center;
+      font-size: 1.4rem;
+    }
+    img {
+    height: 160px;
+    width: 160px;
     object-fit: cover;
-  }
+    }
 
-  .popoutCampground {
-    height: 300px;
-    width: 300px;
-    object-fit: cover;
   }
+}
 }
 
 #contact {
