--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -170,7 +170,15 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
-  height: 100%;
+  height: 100%;    
+  .home-btns {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      button {
+        margin-bottom: 20px;
+      }
+    }
 
   .hero {
     height: 45vh;
@@ -193,6 +201,8 @@ body {
       text-align: center;
       margin: auto;
     }
+
+
   }
 
   button {
@@ -840,4 +850,120 @@ width: 80%;
       transform: translateY(5px);
     }
   }
+}
+
+@media only screen and (min-width: 600px) {
+  div.react-tabs {
+    ul {
+      margin: 20px;
+      margin-bottom: 0em;
+    }
+    div.react-tabs__tab-panel {
+      margin: 0 20px;
+    }
+  }
+  
+  #splashscreen {
+    svg {
+      top: -2vh;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+    .buttons {
+      top: 560px;
+    }
+  }
+
+  #navbar {
+    justify-content: space-between;
+    ul {
+      margin: 0 20px;
+    }
+    img.logo {
+      margin: 0 20px;
+      height: 8vh;
+      display: flex;
+      border-radius: 50%;
+      border: 2px solid white;
+    }
+  }
+
+  #login {
+    h1 {
+      margin-top: 2em;
+    }
+    form {
+      margin-top: 1rem;
+    }
+    button {
+      box-shadow: 3px 3px 10px 2px rgba(0, 0, 0, 0.4),
+      -3px -3px 10px 2px rgba(255, 255, 255, 0.9);
+    }
+  }
+
+  #register {
+    h1 {
+      margin-top: 0.5em;
+    }
+    button {
+      box-shadow: 3px 3px 10px 2px rgba(0, 0, 0, 0.4),
+      -3px -3px 10px 2px rgba(255, 255, 255, 0.9);
+    }
+  }
+
+  #homepage {
+    .hero {
+      height: 60vh;
+      h1 {
+       max-width: 80%;
+       font-size: 6em;
+      }
+    }
+    .home-btns {
+      margin-top: -2rem;
+      width: 90vh;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      button {
+        box-shadow: 3px 3px 10px 2px rgba(0, 0, 0, 0.4),
+        -3px -3px 10px 2px rgba(255, 255, 255, 0.9);
+      }
+    }
+  }
+
+  #browse {
+    select.dropdown {
+      margin-bottom: 1.5rem;
+    }
+    #all-tiles {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+    .tile {
+      width: 40vw;
+      min-height: 550px;
+    }
+    img {
+      height: 300px;
+      object-fit: cover;
+      object-position: center;
+    }
+  }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 }
