--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -24,7 +24,7 @@
 }
 
 div.react-tabs {
-  ul {
+  & > ul {
     display: flex;
     margin: 0;
 
@@ -174,15 +174,15 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
-  height: 100%;    
+  height: 100%;
   .home-btns {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      button {
-        margin-bottom: 20px;
-      }
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    button {
+      margin-bottom: 20px;
     }
+  }
 
   .hero {
     height: 45vh;
@@ -205,8 +205,6 @@ body {
       text-align: center;
       margin: auto;
     }
-
-
   }
 
   button {
@@ -772,46 +770,48 @@ body {
     text-align: center;
     font-size: 2rem;
   }
-}
-
-a {
-  text-decoration: none;
-  font-family: var(--wilderness-font);
-  color: black;
-.site-list-item {
-  text-align: center;
-  text-decoration: none;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin: 0.6rem;
-  background-color: var(--color-off-white);
-  box-shadow: 3px 3px 10px 2px rgba(0, 0, 0, 0.4),
-    -3px -3px 10px 2px rgba(255, 255, 255, 0.9);
-  border-radius: 20px;
-  padding-top: 1.3rem;
-  padding: 1rem;
-  img {
-    max-width: 90%;
-    margin-top: 1rem;
-  }
-  h3 {
-    margin-top: 1rem;
-    margin-bottom: 0em;
-    font-family: var(--wilderness-font);
-    font-size: 2rem;
-    color: black;
-  }
-  .visited {
+  a {
     text-decoration: none;
-  }
+    font-family: var(--wilderness-font);
+    color: black;
 
-}
+    .site-list-item {
+      text-align: center;
+      text-decoration: none;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      margin: 0.6rem;
+      background-color: var(--color-off-white);
+      box-shadow: 3px 3px 10px 2px rgba(0, 0, 0, 0.4),
+        -3px -3px 10px 2px rgba(255, 255, 255, 0.9);
+      border-radius: 20px;
+      padding-top: 1.3rem;
+      padding: 1rem;
+
+      img {
+        max-width: 90%;
+        margin-top: 1rem;
+      }
+
+      h3 {
+        margin-top: 1rem;
+        margin-bottom: 0em;
+        font-family: var(--wilderness-font);
+        font-size: 2rem;
+        color: black;
+      }
+
+      .visited {
+        text-decoration: none;
+      }
+    }
+  }
 }
 
 #map-container {
-  width: 90vw;
+  width: 100%;
   display: flex;
   justify-content: center;
   margin: 2rem 0;
@@ -820,26 +820,26 @@ a {
     border: none;
   }
 
-.mapboxgl-popup-content {
-width: 80%;
-  .popoutRec, .popoutCampground  {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-    h3 {
-      word-wrap: break-word ;
-      max-width: 80%;
-      text-align: center;
-      font-size: 1.4rem;
+  .mapboxgl-popup-content {
+    width: 80%;
+    .popoutRec,
+    .popoutCampground {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      h3 {
+        word-wrap: break-word;
+        max-width: 80%;
+        text-align: center;
+        font-size: 1.4rem;
+      }
+      img {
+        height: 160px;
+        width: 160px;
+        object-fit: cover;
+      }
     }
-    img {
-    height: 160px;
-    width: 160px;
-    object-fit: cover;
-    }
-
   }
-}
 }
 
 #contact {
@@ -867,7 +867,7 @@ width: 80%;
       margin: 0 20px;
     }
   }
-  
+
   #splashscreen {
     svg {
       top: -2vh;
@@ -902,7 +902,7 @@ width: 80%;
     }
     button {
       box-shadow: 3px 3px 10px 2px rgba(0, 0, 0, 0.4),
-      -3px -3px 10px 2px rgba(255, 255, 255, 0.9);
+        -3px -3px 10px 2px rgba(255, 255, 255, 0.9);
     }
   }
 
@@ -912,7 +912,7 @@ width: 80%;
     }
     button {
       box-shadow: 3px 3px 10px 2px rgba(0, 0, 0, 0.4),
-      -3px -3px 10px 2px rgba(255, 255, 255, 0.9);
+        -3px -3px 10px 2px rgba(255, 255, 255, 0.9);
     }
   }
 
@@ -920,8 +920,8 @@ width: 80%;
     .hero {
       height: 60vh;
       h1 {
-       max-width: 80%;
-       font-size: 6em;
+        max-width: 80%;
+        font-size: 6em;
       }
     }
     .home-btns {
@@ -932,7 +932,7 @@ width: 80%;
       justify-content: space-between;
       button {
         box-shadow: 3px 3px 10px 2px rgba(0, 0, 0, 0.4),
-        -3px -3px 10px 2px rgba(255, 255, 255, 0.9);
+          -3px -3px 10px 2px rgba(255, 255, 255, 0.9);
       }
     }
   }
@@ -956,19 +956,4 @@ width: 80%;
       object-position: center;
     }
   }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 }
