--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -871,6 +871,16 @@ body {
     }
   }
 
+  #settings {
+    max-height: 400px;
+    flex-wrap: wrap;
+    label {
+      justify-content: space-evenly;
+      width: 65%;
+      max-width: 400px;
+    }
+  }
+
   #login {
     h1 {
       margin-top: 2em;
