--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -8,6 +8,7 @@
   border-radius: 15px;
   font-family: var(--wilderness-font);
   font-size: 1.7rem;
+  cursor: pointer;
 }
 
 :root {
@@ -706,6 +707,7 @@ body {
         font-family: var(--body-font);
         text-decoration: underline;
         color: var(--color-forest-green);
+        cursor: pointer;
       }
       button {
         @include global-button();
@@ -755,7 +757,6 @@ body {
     }
   }
 }
-
 
 #map-container {
   width: 100%;
@@ -823,28 +824,28 @@ body {
       transform: translateX(-50%);
     }
     #browse {
-        select.dropdown {
-            margin-bottom: 1.5rem;
-        }
-        #all-tiles {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-        }
-        .tile {
-            width: 27vw;
-            min-height: 550px;
-        }
-        img {
-            height: 300px;
-            object-fit: cover;
-            object-position: center;
-        }
-    .buttons {
-      top: 560px;
+      select.dropdown {
+        margin-bottom: 1.5rem;
+      }
+      #all-tiles {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+      }
+      .tile {
+        width: 27vw;
+        min-height: 550px;
+      }
+      img {
+        height: 300px;
+        object-fit: cover;
+        object-position: center;
+      }
+      .buttons {
+        top: 560px;
+      }
     }
   }
-}
 
   #single-site {
     h1 {
@@ -980,6 +981,30 @@ body {
       margin: 50px;
       display: flex;
       justify-content: center;
+    }
+  }
+}
+
+#my-account {
+  .my-reviews {
+    #review-container {
+      padding: 2rem;
+      width: auto;
+      .review-header {
+        .review-avatar {
+          width: auto;
+          img {
+            width: 150px;
+            height: 150px;
+          }
+        }
+        .review-meta-info {
+          margin-left: 6vw;
+          h3 {
+            font-size: 2rem;
+          }
+        }
+      }
     }
   }
 }
