more late night shenanigans

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -983,3 +983,14 @@ body {
     }
   }
 }
+
+#hotels {
+  .hotel-tiles {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    article.hotel-tile {
+      width: 27vw;
+    }
+  }
+}
